renamed lab7 as external hardware lab 8 as taylor series

--- a/ENGR114-Labs/Lab07-External_Hardware/ENGR114-Lab07-External-Hardware.ipynb
+++ b/ENGR114-Labs/Lab07-External_Hardware/ENGR114-Lab07-External-Hardware.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 08 - External Hardware"
+    "# Lab 07 - External Hardware"
    ]
   },
   {
@@ -43,7 +43,9 @@
    "source": [
     "## Lab\n",
     "\n",
-    "For this group lab assignment, your group will use Python to interact with an Arduino to dynamically turn on and off an LED, and then your group will use Python to collect and plot the sensor data. Your group will construct two Python scripts and use two Arduino scripts to complete these tasks. At the end of the lab, you will be able to use Python to interact with external hardware."
+    "For this group lab assignment, your group will use Python to interact with an Arduino to dynamically turn on and off an LED, then your group will use Python to collect and plot the sensor data.\n",
+    "\n",
+    "Your group will construct two Python scripts and use two Arduino scripts to complete these tasks. At the end of the lab, you will be able to use Python to interact with external hardware."
    ]
   },
   {
@@ -79,9 +81,9 @@
     "\n",
     "(c) Twist the little blue potentiometer to turn the LED connected to the Arduino on and off\n",
     "\n",
-    "(d) Use the Arduino Serial Monitor and Arduino Serial Plotter to see the potentiometer reading\n",
+    "(d) Use the Arduino Serial Monitor and Arduino Serial Plotter to visualize the potentiometer reading\n",
     "\n",
-    "(e) Build a Python script and to record the potentiometer level and draw a plot "
+    "(e) Build a Python script to record the potentiometer reading and draw a plot "
    ]
   },
   {
@@ -187,7 +189,7 @@
    "source": [
     "#### (f) Use the Python REPL to turn the Arduino LED on and off\n",
     "\n",
-    "Next you are going to use Python to turn the Arduino LED on and off. You will accomplish this with a Python package called **PySerial**. **PySerial** ([pythonhosted.org/pyserial](https://pythonhosted.org/pyserial/)) is a Python package used for serial communication. Before you can use **PySerial** with Python, the **PySerial** package needs to be installed. \n",
+    "Next, you are going to use Python to turn the Arduino LED on and off. You will accomplish this with a Python package called **PySerial**. **PySerial** ([pythonhosted.org/pyserial](https://pythonhosted.org/pyserial/)) is a Python package used for serial communication. Before you can use **PySerial** with Python, the **PySerial** package needs to be installed. \n",
     "\n",
     "The **PySerial** package can be installed at the **Anaconda Prompt**. Go to the Windows Start Menu and search for **Anaconda Prompt**. Open an **Anaconda Prompt** window. At the prompt, type the following command and hit [Enter].\n",
     "\n",
@@ -203,7 +205,7 @@
     "\n",
     "![The Python REPL shown in the Anaconda Prompt window](images/anaconda_prompt_python_REPL.png)\n",
     "\n",
-    "At the Python REPL, type the following commands. If the the command is preceded by a REPL prompt ```>>>``` type the command into the REPL. If the command does not start with a REPL prompt, this line represents expected output.\n",
+    "At the Python REPL, type the following commands. If the the command is preceded by a REPL prompt ```>>>``` type the command into the REPL. If the command does not start with a ```>>>``` REPL prompt, the line represents expected output.\n",
     "\n",
     "```text\n",
     ">>> import serial\n",
@@ -274,7 +276,7 @@
     "ser.close() \n",
     "```\n",
     "\n",
-    "Before you run the open serial port section of code, put in place the line of code to close the serial port. If the serial port is not closed, you will not be able to use the serial port the next time your script runs. When you have problems connecting to the Arduino with Python, often it is because the serial line was not closed. \n",
+    "Before you run the open serial port section of code, put in place the line of code to close the serial port. If the serial port is not closed, you will not be able to use the serial port the next time your script runs. When you have problems connecting to the Arduino with Python, often it is because the serial port was not closed. \n",
     "\n",
     "Insert one of the sections of code below between the opening and closing of the serial port:\n",
     "\n",
@@ -317,7 +319,7 @@
    "source": [
     "Run the entire Python script and watch the Arduino LED blink 10 times. A common problem is the serial port was not closed before the script starts. Make sure the Arduino Serial Monitor is closed and try running ```>>> ser.close()``` at the Python REPL.\n",
     "\n",
-    "Once Python successfully blinks the Arduino LED, use your Python coding skills to ask the user for input and turn on or off the Arduino's LED based on user input. Complete this task with the ```input()``` function running in a while loop. Within the while loop, add an if statement that allows the program to break out of the loop (remember the keyword ```break```) and go to the ```ser.close()``` section. The serial port must be closed for Python to use the serial line again. \n",
+    "Once Python successfully blinks the Arduino LED, use your Python coding skills to ask the user for input and turn on or off the Arduino's LED based on user input. Complete this task with the ```input()``` function running in a _while loop_. Within the while loop, add an _if statement_ that allows the program to break out of the loop (remember the keyword ```break```) and go to the ```ser.close()``` section. The serial port must be closed for Python to use the serial line again. \n",
     "\n",
     "Below is an example of an if/break statement: \n",
     "\n",
@@ -365,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (b) Copy and load the **_potentiometer.ino_** sketch onto the Arduino \n",
+    "#### (b) Copy and load the **_potentiometer.ino_** sketch onto the Arduino IDE\n",
     "\n",
     "Open a new sketch in the Arduino IDE by going to [File] --> [New]. Copy the code below into the new sketch and save the sketch as **_potentiometer.ino_** \n",
     "\n",
@@ -549,7 +551,7 @@
     "\n",
     "If you have time, there is some additional functionality you can add to your Python script: \n",
     "\n",
-    " * Display the high and low potentiometer readings \n",
+    " * Display the high and low potentiometer readings on the plot\n",
     "\n",
     " * Connect a photocell to the Arduino and plot photocell readings with Python \n",
     "\n",
@@ -562,9 +564,9 @@
    "source": [
     "## Deliverables\n",
     "\n",
-    "Make sure your group’s Python and Arduino code are well commented and sectioned. Ensure the variable names are descriptive and there is enough documentation for another group of students to reuse the code without much trouble. Each student’s submission for the lab should be one of the following files (you do not need to submit all the **_.ipynb_** and **_.ino_** files used in the lab, just submit the files you were primarily responsible for). \n",
+    "Make sure your group’s Python and Arduino code are well commented and sectioned. Ensure the variable names are descriptive and there is enough documentation for another group of students to reuse the code without much trouble. Each student’s submission for the lab should be two of the following files (you do not need to submit all the **_.ipynb_** and **_.ino_** files used in the lab, just submit the files you were primarily responsible for). \n",
     "\n",
-    "Each student needs to upload one Python file (one .ipynb-file) and one Arduino file (one .ino-file). Upload your files to the D2L Lab 8 Uploads folder. \n",
+    "Each student needs to upload one Python file (one .ipynb-file) and one Arduino file (one .ino-file). Upload your files to the D2L Lab 7 Uploads folder. \n",
     "\n",
     "**_LED.ipynb_** and **_PhysicalPixel.ino_**\n",
     "\n",
@@ -579,13 +581,6 @@
    "source": [
     "#### _By P. Kazarinoff, Portland Community College, 2018-2019_"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -604,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
