--- a/ENGR114-Labs/Lab08-Taylor_Series/ENGR114-Lab08-Taylor_Series.ipynb
+++ b/ENGR114-Labs/Lab08-Taylor_Series/ENGR114-Lab08-Taylor_Series.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ENGR114 - Lab 07 - Taylor Series\n",
+    "# Lab 08 - Taylor Series\n",
     "\n",
     "In this lab, you will create a Python function that calculates the _Taylor Series_ of two mathematical functions. A Taylor Series is an infinite series of mathematical terms that when summed together approximate a mathematical function. A Taylor Series can be used to approximate $e^x$, $sine$, and $cosine$. \n",
     "\n",
@@ -109,9 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deliverables\n",
+    "## Deliverable\n",
     "\n",
-    "Once you are satisfied that your file meets all the requirements, suppress all screen output, save your **lab7.py** file, and submit it to appropriate D2L folder."
+    "Once you are satisfied that your file meets all the requirements, suppress all screen output, save your **lab8.py** file, and submit it to appropriate D2L folder."
    ]
   },
   {
@@ -147,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
