--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
@@ -261,8 +261,8 @@
     "| Week 5 | Functions | Lab 5: Web API's | Homework 4 |\n",
     "| Week 6 | **Exam 1** | No Lab  | |\n",
     "| Week 7 | If, elif, else | Lab 6: Image Editing | |\n",
-    "| Week 8 | Loops | Lab 7: Taylor Series | Homework 5 |\n",
-    "| Week 9 | External Hardware | Lab 8: External Hardware | Homework 6 |\n",
+    "| Week 8 | Loops | Lab 7: External Hardware | Homework 5 |\n",
+    "| Week 9 | External Hardware | Lab 8: Taylor Series | Homework 6 |\n",
     "| Week 10 | MicroPython | No Lab | |\n",
     "| Week 11 | Review | **Exam 2** | |\n",
     "| Finals Week | Final Project Delivery | |"
@@ -292,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
